# python-kublo

./: .dockerignore  .env.example  .flake8  .gitignore  DockerFile  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0002_remove_customuser_username.py  0003_alter_customuser_managers.py
api/tests/: test_user_serializer.py
app/app/: settings.py  urls.py
app/core/: admin.py  models.py
app/core/migrations/: 0001_initial.py
app/core/tests/: test_admin.py  test_commands.py  test_models.py
app/user/: serializers.py  urls.py  views.py
app/user/tests/: test_user_api.py
apps/cabinet_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/cabinet_api/migrations/: 0001_initial.py  0002_remove_customuser_username.py  0003_alter_customuser_managers.py  0004_personalaccount.py  0005_remove_personalaccount_deposit_term_and_more.py  0006_alter_personalaccount_investment_sector_and_more.py
apps/cabinet_api/serializers/: token.py  (+1 more)
apps/myapp/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/user/: serializers.py
backend/: DockerFile  docker-entrypoint.sh
core/: settings.py  urls.py  wsgi.py
djangoChallenge/: asgi.py  settings.py  urls.py  wsgi.py
kublo/: asgi.py  core_views.py  tests.py  urls.py  wsgi.py
kublo/settings/: base.py
myapp/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_cabinet.py  0003_alter_cabinet_referral_partners_list.py
nginx/: DockerFile  conf.d
(+11 files in other folders)
