[tool.poetry]
name = "kublo-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "kublo_api"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.4"
django-rq = "^2.8.1"
django-rest-framework = "^0.1.0"
djangorestframework-simplejwt = "^5.2.2"
drf-yasg = {extras = ["validation"], version = "^1.21.7"}
psycopg2-binary = "^2.9.7"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
