[tool.poetry]
name = "python-kublo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
djangorestframework = "^3.14.0"
django-rq = "^2.8.1"
djangorestframework-simplejwt = "^5.2.2"
drf-yasg = "^1.21.7"
psycopg2-binary = "^2.9.7"
gunicorn = "^21.2.0"
whitenoise = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
